syntax = "proto3";

package notifications;

service NotificationsService {
  rpc NotifyEmail (NotifyEmailMessage) returns (Empty) {};
}

message NotifyEmailMessage {
  string email = 1;
  string message = 2;
}

message Empty {}